# opengl-tutorial

./: .gitignore  CMakeLists.txt  README.md
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: vertexShader.glsl
src/: loader.cpp  loader.h  main.cpp  model_texture.h  raw_model.cpp  raw_model.h  renderer.cpp  renderer.h  shader_program.cpp  shader_program.h  static_shader.cpp  static_shader.h  stb_image.cpp  textured_model.cpp  textured_model.h  utils.cpp  utils.h
src/entities/: camera.cpp  camera.h  entity.cpp  entity.h
src/models/: raw_model.cpp  raw_model.h  textured_model.cpp  textured_model.h
src/render/: loader.cpp  loader.h  renderer.cpp  renderer.h
src/shaders/: shader_program.cpp  shader_program.h  static_shader.cpp  static_shader.h
src/textures/: model_texture.cpp
